# web

./: Diagram #1.pyns  Dockerfile  README.md  alembic.ini  config.ini  connect.py  database_setup.py  factorize.py  generate_data.py  main.py  models.py  my_select.py  seed.py  seeds.py  university.db
1-st part/: main.py
HW_7/: pyproject.toml
alembic/: env.py
front-init/: Dockerfile  main.py
front-init/storage/: data.json
front-init/templates/: error.html  index.html  message.html
personal_assistant_group_03/: Dockerfile  main.py  notebook.py
sql/queries/: query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
